Update to Hadoop3